<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pololu</name>
  <version>0.0.0</version>
  <description>ROS2 drivers for Pololu Maestro, Jrk, and Simple Motor Controller</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>libusb-1.0</exec_depend>
  <build_export_depend>libusb-1.0-dev</build_export_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
